# MultiworldGG-Beta

./: .dockerignore  .gitignore  APContainer.py  BUILD_README.md  BaseClasses.py  BaseUtils.py  CLIENT_README.md  ClientBuilder.py  CommonClient.py  Dockerfile  FileUtils.py  Generate.py  Gui.py  Launcher.py  Main.py  ModuleUpdate.py  MultiServer.py  MultiWorld.py  NetUtils.py  Options.py  OptionsCreator.py  Patch.py  README.md  RELEASE_NOTES.md  SNIClient.py  Updater.py  Utils.py  WebHost.py  access_token  application.yaml  build_exe.ps1  build_exe.py  build_requirements.txt  conftest.py  frontend_protocol.py  fuzz.py  inno_setup.iss  kvui.py  log  pkg_resources.py  (+6 more)
.github/: DESIGN_SPEC.md  FUNDING.yml  SETUP.md  pyright-config.json
GitHubLib/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
WebHostLib/: README.md  __init__.py  autolauncher.py  check.py  customserver.py  downloads.py  generate.py  landing.py  lobby.py  lttpsprites.py  misc.py  models.py  options.py  requirements.txt  stats.py  tracker.py  upload.py
cx_custom_hooks/: __init__.py  _kivy_.py
data/: QOTD.txt  client.ini  config.ini  game_details.json  game_index.py  launcher.kv  options.yaml
default_wheels/: gclib-1.0.0-py3-none-any.whl  (+86 more)
deploy/: README.md  (+7 more)
game_index/: mwgg_igdb.py  pyproject.toml
game_index/ao/: mwgg_igdb.py  pyproject.toml
game_index/nr/: mwgg_igdb.py  pyproject.toml
game_index/sixteen/: mwgg_igdb.py  pyproject.toml
game_index/twelve/: mwgg_igdb.py  pyproject.toml
gui/: Gui.py  UIDataClasses.py  aaaaaah.py  bottomappbar.py  console.py  dialog.py  hintscreen.py  kvui-functions.py  kvui_functions.py  launcher.py  launcher_sliver_appbar.py  mw_theme.py  pyproject.toml  settings_components.py  settings_screen.py  splashscreen.py  test_launcher.py  textconsole.py  titlebar.py  topappbar.py
gui/kivydi/: __init__.py  colorpicker.py  expansionlist.kv  expansionlist.py  loadinglayout.py  markuptextfield.py
gui/mwgg_gui/: __init__.py  constants.py  loadanimlayout.py  splashscreen.py
gui/mwgg_gui/components/: __init__.py  bottomappbar.py  dialog.py  guidataclasses.py  mw_theme.py  profile.py  progress_overlay.py  titlebar.py  topappbar.py
gui/mwgg_gui/console/: console.py  textconsole.py
gui/mwgg_gui/hint/: hintscreen.py
gui/mwgg_gui/launcher/: __init__.py  launcher.kv  launcher.py  launcher_favorite_bar.py  launcher_sliver_appbar.py  launcher_yaml.py
gui/mwgg_gui/overrides/: __init__.py  colorpicker.py  expansionlist.kv  expansionlist.py  markuptextfield.py  screen.py
gui/mwgg_gui/settings/: settings_components.py  settings_screen.py
splashscreen/: mwgg_splash.py  pyproject.toml
world_build_setuptools/: MANIFEST.in  WorldsREADME.md  build_editable_modules.ps1  build_wheels.ps1  pyproject.toml
worlds/_bizhawk/: __init__.py  client.py  context.py  pyproject.toml
worlds/_debug/: Register.py  _whl_bld_iface.py  archipelago.json  pyproject.toml
worlds/_manual/: ManualClient.py  Register.py  __init__.py  _whl_bld_iface.py  archipelago.json  pyproject.toml
worlds/_manual/docs/: en_Manual.md
worlds/_sni/: __init__.py  client.py  context.py  pyproject.toml
worlds/_tracker/: TrackerClient.py  TrackerKivy.py  __init__.py  archipelago.json  pyproject.toml
worlds/_tracker/docs/: client-integration.md  setup.md
worlds/_tracker/gui/: Tracker.kv  __init__.py
worlds/adventure/: Client.py  Constants.py  Register.py  __init__.py  archipelago.json  pyproject.toml
worlds/against_the_storm/: Constants.py  Items.py  Locations.py  Register.py  __init__.py  archipelago.json  pyproject.toml
worlds/against_the_storm/docs/: en_Against_The_Storm.md  setup_en.md
worlds/ahit/: Client.py  Constants.py  Options.py  Register.py  __init__.py  archipelago.json  pyproject.toml
worlds/ahit/docs/: setup_en.md
worlds/albw/: Client.py  Constants.py  Patch.py  Register.py  __init__.py  archipelago.json  pyproject.toml
worlds/albw/docs/: setup_en.md  setup_fr.md
worlds/alttp/: Adjuster.py  Client.py  Constants.py  EntranceShuffle.py  ItemPool.py  Items.py  Register.py  Rom.py  __init__.py  archipelago.json  pyproject.toml
worlds/am2r/: Client.py  __init__.py  archipelago.json  items.py  locations.py  options.py  pyproject.toml  regions.py  rules.py  todo.py
worlds/animal_well/: Constants.py  Register.py  __init__.py  archipelago.json  items.py  pyproject.toml
worlds/animal_well/client/: bean_patcher.py  client.py
worlds/apeescape/: Client.py  Constants.py  ItemHandlers.py  Items.py  Locations.py  Notes.txt  Options.py  RAMAddress.py  Regions.py  Register.py  Rules.py  SpecialItems.py  Strings.py  __init__.py  archipelago.json  constants.py  pyproject.toml
worlds/apgo/: Register.py  Trips.py  __init__.py  archipelago.json  pyproject.toml
worlds/apgo/docs/: en_Archipela-Go!.md  setup_en.md
worlds/apgo/test/: TestDistance.py  TestOptions.py  TestTrips.py
worlds/apquest/: Register.py  archipelago.json  pyproject.toml
worlds/apquest/docs/: setup_de.md  setup_en.md
worlds/apsudoku/: Constants.py  Register.py  __init__.py  archipelago.json  pyproject.toml
worlds/aquaria/: Constants.py  Register.py  __init__.py  archipelago.json  pyproject.toml
worlds/aquaria/docs/: setup_en.md  setup_fr.md
worlds/archipidle/: Constants.py  Register.py  __init__.py  archipelago.json  pyproject.toml
worlds/aus/: Constants.py  Items.py  Register.py  Rules.py  __init__.py  archipelago.json  pyproject.toml
worlds/aus/docs/: en_An Untitled Story.md
worlds/balatro/: Constants.py  Register.py  __init__.py  archipelago.json  pyproject.toml
worlds/banjo_tooie/: BTClient.py  Constants.py  Hints.py  Items.py  Register.py  __init__.py  archipelago.json  pyproject.toml
worlds/banjo_tooie/docs/: setup_en.md  setup_fr.md
worlds/banjo_tooie/test/: test_signpost_hints.py
worlds/bfbb/: BfBBClient.py  Register.py  Rom.py  Rules.py  __init__.py  archipelago.json  pyproject.toml
worlds/bfbb/docs/: en_Battle for Bikini Bottom.md  setup_en.md
worlds/bfbb/tracker/maps/: maps.json
worlds/bfbb/tracker/var_detailed/maps/: maps_detailed.json
(+2400 files in other folders)
