[build-system]
requires = ["cx-Freeze>=6.15.0", "setuptools>=68.0.0"]
build-backend = "cx_Freeze.build_exe"

[project]
name = "MultiWorldGG"
version = "0.6.4"
description = "MultiWorld.GG - More, and faster."
authors = [
    {name = "DelilahIsDidi"},
    {name = "TreZc0"}
]
license = "GPL-3.0-or-later AND (MIT)"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Private :: Do Not Upload"
]
keywords = ["multiworld", "games", "randomizer", "archipelago"]
dependencies = [
    "colorama>=0.4.6",
    "websockets>=13.0.1,<14",
    "PyYAML>=6.0.2",
    "jellyfish>=1.1.3",
    "jinja2>=3.1.6",
    "schema>=0.7.7",
    "kivy>=2.3.1",
    "bsdiff4>=1.2.6",
    "platformdirs>=4.3.6",
    "certifi>=2025.4.26",
    "cython>=3.0.12",
    "cymem>=2.0.11",
    "orjson>=3.10.15",
    "typing_extensions>=4.12.2",
    "dolphin_memory_engine>=1.2.0",
    "pyshortcuts>=1.9.1",
    "kivymd>=2.0.1.dev0",
    "tqdm>=4.67.1",
    "numpy>=1.26.1",
    "Pillow>=11.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
multiworld = "MultiWorld:main"
multiserver = "MultiServer:main"
generate = "Generate:main"
patch = "Patch:main"

[project.gui-scripts]
multiworld-gui = "MultiWorld:main"

[tool.cx_Freeze]
packages = [
    "kivy",
    "kivymd",
    "kivy_deps",
    "websockets",
    "cymem",
    "bsdiff4",
    "platformdirs",
    "certifi",
    "orjson",
    "typing_extensions",
    "dolphin_memory_engine",
    "pyshortcuts",
    "tqdm",
    "numpy",
    "colorama",
    "yaml",
    "jellyfish",
    "jinja2",
    "schema",
    "asynckivy",
    "PIL",
    "mwgg_gui",
    "mwgg_splash",
    "worlds"
]

includes = [
    "ModuleUpdate",
    "BaseUtils",
    "CommonClient",
    "Gui",
    "ClientBuilder",
    "BaseClasses",
    "Options"
]

excludes = [
    "Cython",
    "PySide2",
    "pandas",
    "matplotlib",
    "scipy",
    "pygments",
    "pytest",
    "unittest",
    "test",
    "tests",
    "__pycache__",
    ".pytest_cache",
    "kivy_deps.sdl2",
    "kivy_deps.glew",
    "kivy_deps.angle"
]

zip_include_packages = ["*"]
zip_exclude_packages = ["kivymd", "mwgg_gui", "kivy", "worlds"]
include_msvcr = false
replace_paths = ["*."]
optimize = 1

[tool.cx_Freeze.build_exe]
include_files = [
    ["data", "data"],
    ["LICENSE", "LICENSE"],
    ["README.md", "README.md"],
    ["*.yaml", "*.yaml"],
    ["kivy/data", "lib/kivy/data"],
    ["kivy/include", "lib/kivy/include"]
]

[tool.cx_Freeze.executables]
[[tool.cx_Freeze.executables.multi_world]]
script = "MultiWorld.py"
target_name = "MultiWorldGGClient.exe"
icon = "data/icon.ico"
base = "Win32GUI"
shortcut_name = "MultiWorldGG"
shortcut_dir = "DesktopFolder"

[[tool.cx_Freeze.executables.multi_server]]
script = "MultiServer.py"
target_name = "MultiWorldGGServer.exe"
icon = "data/icon.ico"
shortcut_name = "MWGGMultiServer"
shortcut_dir = "DesktopFolder"

[[tool.cx_Freeze.executables.generate]]
script = "Generate.py"
target_name = "MultiWorldGGGenerate.exe"
icon = "data/icon.ico"
shortcut_name = "MWGGGenerate"
shortcut_dir = "DesktopFolder"

[[tool.cx_Freeze.executables.patch]]
script = "Patch.py"
target_name = "MultiWorldGGPatch.exe"
icon = "data/icon.ico"
shortcut_name = "MWGGPatch"
shortcut_dir = "DesktopFolder"

[[tool.cx_Freeze.executables.multi_world_debug]]
script = "MultiWorld.py"
target_name = "MultiWorldGGClientDebug.exe"
icon = "data/icon.ico"
shortcut_name = "MultiWorldGG Debug"
shortcut_dir = "DesktopFolder"
