[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mwgg_splash"
version = "0.0.1a"
description = "MultiWorldGG Splash Screen"
authors = [
    {name = "DelilahIsDidi"}
]
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.3.0",
]

[project.scripts]
mwgg_splash = "mwgg_splash:main"

[tool.setuptools]
py-modules = ["mwgg_splash"]