[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mwgg_igdb_sixteen"
version = "0.0.5"
description = "IGDB database indexed for MultiworldGG use"
authors = [{name = "DelilahIsDidi"}]
requires-python = ">=3.8"
classifiers = [
    "Private :: Do Not Upload"
]

[tool.setuptools]
py-modules = ["mwgg_igdb"]
