[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "worlds._bizhawk"
version = "1.0.2"
description = "MultiWorld: Bizhawk Client"
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"


[tool.setuptools.packages.find]
where = ["src"]
include = ["worlds._bizhawk"]
namespaces = true

