[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.debug"
version = "0.0.1"
description = "MultiWorld: debug"
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.12"
[[project.authors]]
name = "TreZc0"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds.debug",]
namespaces = true
