[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "worlds._sni"
version = "1.0.1"
description = "MultiWorld: SNI Client"
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"


[tool.setuptools.packages.find]
where = ["src"]
include = ["worlds._sni"]
namespaces = true
