[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "worlds._sni"
version = "1.0.5"
description = "MultiWorld: SNI Client"
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.13"


[tool.setuptools.packages.find]
where = ["src"]
include = ["worlds._sni"]
namespaces = true
