[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds._tracker"
version = "0.0.3"
description = "MultiWorld: Archipelago"
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.13"
[[project.authors]]
name = "Faris"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds._tracker",]
namespaces = true
