[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.adventure"
dynamic = ["version"]
description = "MultiWorld: Adventure"
authors = [
    {name = "JusticePS"}
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.client"]
adventure.Client = "adventure.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["worlds.adventure"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "worlds.adventure.Constants.VERSION"}
