[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.adventure"
version = "0.0.5"
description = "MultiWorld: Adventure"
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.12"
[[project.authors]]
name = "JusticePS"

[project.entry-points."mwgg.client"]
"worlds.adventure.Client" = "worlds.adventure.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds.adventure",]
namespaces = true
