[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.against_the_storm"
dynamic = ["version"]
description = "MultiWorld: Against the Storm"
authors = [
    {name = "Ryguy9999"}
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]
include = ["worlds.against_the_storm"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "worlds.against_the_storm.Constants.VERSION"}
