[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.against_the_storm"
version = "1.0.0"
description = "MultiWorld: Against the Storm"
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.12"
[[project.authors]]
name = "Ryguy9999"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds.against_the_storm",]
namespaces = true
