[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.ahit"
dynamic = ["version"]
description = "MultiWorld: A Hat in Time"
authors = [
    {name = "CookieCat45"}
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.client"]
"worlds.ahit.Client" = "worlds.ahit.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["worlds.ahit"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "worlds.ahit.Constants.VERSION"}
