[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.ahit"
version = "0.0.0"
description = "MultiWorld: A Hat in Time"
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.12"
[[project.authors]]
name = "CookieCat45"

[project.entry-points."mwgg.client"]
"worlds.ahit.Client" = "worlds.ahit.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds.ahit",]
namespaces = true
