[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.albw"
dynamic = ["version"]
description = "MultiWorld: A Link Between Worlds"
authors = [
    {name = "randomsalience"}
]
license = "GPL-2.0-only"
license-files = [
    "LICENSE"
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.client"]
albw.Client = "albw.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["worlds.albw"]
exclude = ["test*", "*test*"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "worlds.albw.Constants.VERSION"}
