[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.albw"
version = "0.1.3"
description = "MultiWorld: A Link Between Worlds"
license = "GPL-2.0-only"
license-files = [ "LICENSE",]
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.12"
dependencies = [ "orjson>=3.10.15",]
[[project.authors]]
name = "randomsalience"

[project.entry-points."mwgg.client"]
"worlds.albw.Client" = "worlds.albw.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds.albw",]
exclude = [ "test*", "*test*",]
namespaces = true
