[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.alttp"
version = "0.0.0"
description = "MultiWorld: A Link to the Past"
license = "MIT"
license-files = [ "LICENSE",]
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.12"
dependencies = [ "maseya-z3pr>=1.0.0rc1", "xxtea>=3.0.0",]
[[project.authors]]
name = "Berserker66"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds.alttp",]
namespaces = true
