[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.animal_well"
dynamic = ["version"]
description = "MultiWorld: ANIMAL WELL"
authors = [
    {name = "ScipioWright"},
    {name = "RoobyRoo"},
    {name = "Franklesby"},
    {name = "Dicene"}
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"
dependencies = [
    "Pymem>=1.13.1",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.entry-points."mwgg.client"]
animal_well.Client = "animal_well.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["worlds.animal_well"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "worlds.animal_well.Constants.VERSION"}
