[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.animal_well"
version = "v0.5.5"
description = "MultiWorld: ANIMAL WELL"
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.12"
dependencies = [ "Pymem>=1.13.1", "pywin32>=306; sys_platform == 'win32'",]
[[project.authors]]
name = "ScipioWright"

[[project.authors]]
name = "RoobyRoo"

[[project.authors]]
name = "Franklesby"

[[project.authors]]
name = "Dicene"

[project.entry-points."mwgg.client"]
"worlds.animal_well.Client" = "worlds.animal_well.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds.animal_well",]
namespaces = true
