[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.apeescape"
version = "0.9.4"
description = "MultiWorld: Ape Escape"
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.12"
[[project.authors]]
name = "Thedragon005"

[[project.authors]]
name = "IHNN"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds.apeescape",]
namespaces = true
