[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.apgo"
dynamic = ["version"]
description = "MultiWorld: Archipeli-Go!"
authors = [
    {name = "Kaito Kid"},
    {name = "aki665"}
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]
include = ["worlds.apgo"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "worlds.apgo.Register.VERSION"}
