[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.apquest"
version = "1.0.1"
description = "MultiWorld: Archipelago"
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.12"
[[project.authors]]
name = "NewSoupVi"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds.apquest",]
namespaces = true
