[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.apsudoku"
dynamic = ["version"]
description = "MultiWorld: Sudoku"
authors = [
    {name = "EmilyV99"}
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]
include = ["worlds.apsudoku"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "worlds.apsudoku.Constants.VERSION"}
