[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.apsudoku"
version = "0.0.0"
description = "MultiWorld: Sudoku"
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.12"
[[project.authors]]
name = "EmilyV99"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds.apsudoku",]
namespaces = true
