[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.aquaria"
dynamic = ["version"]
description = "MultiWorld: Aquaria"
authors = [
    {name = "tioui"}
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["worlds.aquaria"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "worlds.aquaria.Constants.VERSION"}
