[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.aquaria"
version = "0.0.1"
description = "MultiWorld: Aquaria"
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.12"
[[project.authors]]
name = "tioui"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds.aquaria",]
namespaces = true
