[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.archipidle"
dynamic = ["version"]
description = "MultiWorld: ArchipIDLE"
authors = [
    {name = "LegendaryLinux"}
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["worlds.archipidle"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "worlds.archipidle.Constants.VERSION"}
