[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.archipidle"
version = "0.0.0"
description = "MultiWorld: ArchipIDLE"
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.12"
[[project.authors]]
name = "LegendaryLinux"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds.archipidle",]
namespaces = true
