[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.aus"
dynamic = ["version"]
description = "MultiWorld: An Untitled Story"
authors = [
    {name = "ThatOneGuy27"}
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]
include = ["worlds.aus"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "worlds.aus.Register.VERSION"}
