[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.aus"
version = "0.0.1"
description = "MultiWorld: An Untitled Story"
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.12"
[[project.authors]]
name = "ThatOneGuy27"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds.aus",]
namespaces = true
