[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.balatro"
dynamic = ["version"]
description = "MultiWorld: Balatro"
authors = [
    {name = "Burndi"}
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["worlds.balatro"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "worlds.balatro.Constants.VERSION"}
