[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.balatro"
version = "0.0.1"
description = "MultiWorld: Balatro"
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.12"
[[project.authors]]
name = "Burndi"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds.balatro",]
namespaces = true
