[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.banjo_tooie"
dynamic = ["version"]
description = "MultiWorld: Banjo-Tooie"
authors = [
    {name = "jjjj12212"}
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.client"]
"worlds.banjo_tooie.Client" = "worlds.banjo_tooie.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = ["src"]
include = ["worlds.banjo_tooie"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "worlds.banjo_tooie.Register.VERSION"}
