[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.banjo_tooie"
version = "4.10.2"
description = "MultiWorld: Banjo-Tooie"
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.12"
[[project.authors]]
name = "jjjj12212"

[[project.authors]]
name = "g0goTBC"

[[project.authors]]
name = "Austin"

[project.entry-points."mwgg.client"]
"worlds.banjo_tooie.Client" = "worlds.banjo_tooie.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds.banjo_tooie",]
namespaces = true
