[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.bfbb"
version = "1.2.4"
description = "MultiWorld: Archipelago"
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.12"
[[project.authors]]
name = "Cyb3R"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds.bfbb",]
namespaces = true
